Reverted spacing between language symbols, to be corrected in the future

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -391,7 +391,7 @@ body {
 
   display: inline-block;
 
-  padding: 6px 12px;
+  padding: -10px -10px;
 
   text-align: center;
 
@@ -409,13 +409,13 @@ body {
 
   margin-top: -10px;
 
-  margin-left: -15px;
+  margin-left: 0px;
 
   margin-right: -100px;
 
   display: inline-block;
 
-  padding: 6px 12px;
+  padding: -10px -10px;
 
   text-align: center;
 
@@ -443,13 +443,13 @@ body {
 
   margin-top: -10px;
 
-  margin-left: -35px;
+  margin-left: 0px;
 
   margin-right: -100px;
 
   display: inline-block;
 
-  padding: 6px 12px;
+  padding: -10px -10px;
 
   text-align: center;
 
@@ -477,13 +477,13 @@ body {
 
   margin-top: -10px;
 
-  margin-left: -55px;
+  margin-left: 0px;
 
   margin-right: -100px;
 
   display: inline-block;
 
-  padding: 6px 12px;
+  padding: -10px -10px;
 
   text-align: center;
 
